Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -12798,8 +12798,7 @@
    ],
    "source": [
     "sample = df.sample(n=50, random_state=22) #Take a sample of 50 people\n",
-    "sample.Age.mean() #Calculate the sample mean\n",
-    "help(df.sample())"
+    "sample.Age.mean() #Calculate the sample mean"
    ]
   },
   {
